tests/src/frontend/typechecking/invalid/missing_function_2.sk
base class Bar
class Foo() extends Bar uses Show {
  fun toString(): String {
    "Foo"
  }
}

fun main(): void {
  print_raw((Foo()).wut())
}
